--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <body>
     <p>Nice work, that's pretty good. But what's the image name?</p>
 
-    <input type="text" id="userInput" placeholder="Write the possible image name here">
+    <input type="text" id="userInput" placeholder="Possible image name">
     
     <button id="activateScript">Change the image path</button>
 
     <p>If you're correct, an image should appear below.</p>
 
-    <img id="thething" src="placeholder.png" style="width:42px;height:42px;">
+    <img id="thething" src="placeholder.png">
 
     <script>
         document.getElementById('activateScript').addEventListener('click', function() {
