Update index.html (image formatting)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
   <head>
     <title>Nice work</title>
+    <style>
+        /* Ensure the image fits within the width of the screen */
+        #thething {
+            max-width: 90%; /* Scale image down if it exceeds screen width */
+            height: auto;   /* Maintain aspect ratio */
+            display: block; /* Optional: Remove inline gaps caused by <img> */
+            margin: 0 auto; /* Optional: Center the image */
+        }
+    </style>
   </head>
   <body>
     <p>Nice work, that's pretty good. But what's the image name?</p>
