--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </style>
   </head>
   <body>
-    <p>Nice work, that's pretty good. But what's the image name?</p>
+    <p>Nice work, that's pretty good. But what's the image name (password)?</p>
 
-    <input type="text" id="userInput" placeholder="Possible image name">
+    <input type="text" id="userInput" placeholder="Input password here...">
     
     <button id="activateScript">Change the image path</button>
 
